# BetoEngine

./: CMakeLists.txt  README.md
examples/basic_triangle/: TriangleExample.cpp  TriangleExample.h
include/: Engine.h
include/Engine/Core/: Logger.h  Window.h
include/Engine/Graphics/: Mesh.h  MeshManager.h
include/Engine/Graphics/PrimitiveObjects/: Ellipse.h  Rectangle.h  Triangle.h
include/Engine/Math/: Transform.h
include/Engine/UI/: ImGuiManager.h
shaders/: Mesh.frag  Mesh.vert
src/: main.cpp
src/Engine/: Engine.cpp
src/Engine/Core/: Logger.cpp  Window.cpp
src/Engine/Graphics/: Mesh.cpp  MeshManager.cpp
src/Engine/Graphics/PrimitiveObjects/: Ellipse.cpp  Rectangle.cpp  Triangle.cpp
src/Engine/Math/: Transform.cpp
src/Engine/UI/: ImGuiManager.cpp
